Fix nav bar alignment issue with drop down items

--- a/css/anzo_style.css
+++ b/css/anzo_style.css
@@ -12,6 +12,7 @@ body{
 
 div#drops {
     background-color: #4CAF50;
+    padding-top: 1px;
     //padding-left:3em;
     //display: inline-block;
 }
